v0.72.2/build/backends/index.md
To decouple the building of a conda package from Pixi we provide something what are called build backends. These are essentially executables following a specific protocol that is implemented for both Pixi and the build backend. This also allows for decoupling of the build backend from Pixi and it's manifest specification.

## Available Backends

| Backend                                                     | Use Case                                      |
| ----------------------------------------------------------- | --------------------------------------------- |
| [**`pixi-build-cmake`**](pixi-build-cmake/)                 | Projects using CMake                          |
| [**`pixi-build-python`**](pixi-build-python/)               | Building Python packages                      |
| [**`pixi-build-rattler-build`**](pixi-build-rattler-build/) | Direct `recipe.yaml` builds with full control |
| [**`pixi-build-ros`**](pixi-build-ros/)                     | ROS (Robot Operating System) packages         |
| [**`pixi-build-r`**](pixi-build-r/)                         | R packages using `R CMD INSTALL`              |
| [**`pixi-build-rust`**](pixi-build-rust/)                   | Cargo-based Rust applications and libraries   |
| [**`pixi-build-mojo`**](pixi-build-mojo/)                   | Mojo applications and packages                |

All backends are available through the [conda-forge](https://prefix.dev/channels/conda-forge) conda channel and work across multiple platforms (Linux, macOS, Windows). For the latest backend versions, you can prepend the channel list with the [prefix.dev/pixi-build-backends](https://prefix.dev/channels/pixi-build-backends) conda channel.

## Key Concepts

- [Compilers](../key_concepts/compilers/) - How pixi-build integrates with conda-forge's compiler infrastructure

### Backends Do Not Inspect Manifest Dependencies

Build backends never base their behavior on the dependencies declared in the Pixi manifest. Manifest dependencies are only converted into recipe requirements; backend behavior is controlled by:

- the backend configuration in `[package.build.config]`,
- project files such as `pyproject.toml`, `Cargo.toml`, or `DESCRIPTION`,
- the filesystem (e.g. the presence of source files), or
- runtime probes in the generated build script (e.g. checking whether a python interpreter or openssl headers are present in the host environment).

This keeps conditional `if(...)` dependencies, target-specific dependencies, and plain dependencies on an equal footing: a dependency influences the build environment that rattler-build resolves, never the recipe the backend generates.

### Installation

Install a certain build backend by adding it to the `package.build` section of the manifest file.:

```toml
[package.build.backend]
channels = ["https://prefix.dev/conda-forge"]
name = "pixi-build-python"
version = "0.*"
```

For custom backend channels, you can add the channel to the `channels` section of the manifest file:

```toml
[package.build]
backend = { name = "pixi-build-python", version = "0.*" }
channels = ["https://prefix.dev/conda-forge"]
```

### Overriding the Build Backend

Sometimes you want to override the build backend that is used by pixi. Meaning overriding the backend that is specified in the [`[package.build]`](../../reference/pixi_manifest/#build-table). We currently have two environment variables that allow for this:

1. `PIXI_BUILD_BACKEND_OVERRIDE`: This environment variable allows for overriding of one or multiple backends. Use `{name}={path}` to specify a backend name mapped to a path and `,` to separate multiple backends. For example: `pixi-build-cmake=/path/to/bin,pixi-build-python` will:
   1. override the `pixi-build-cmake` backend with the executable located at `/path/to/bin`
   1. and will use the `pixi-build-python` backend from the `PATH`.
1. `PIXI_BUILD_BACKEND_OVERRIDE_ALL`: If this environment variable is set to *some* value e.g `1` or `true`, it will not install any backends in isolation and will assume that all backends are overridden and available in the `PATH`. This is useful for development purposes. e.g `PIXI_BUILD_BACKEND_OVERRIDE_ALL=1 pixi install`

## Troubleshooting

### Rebuilding Generated Recipes

When you build a package (for example via `pixi publish`), the build backends generate a complete rattler-build recipe that is stored in your project's build directory. This can be useful for debugging build issues or understanding exactly how your package is being built.

### Recipe Locations

The build backends generate recipes in two locations:

#### 1. General Recipe (all outputs)

```text
<your_project>/.pixi/build/work/<package-name>--<hash>/debug/
```

This directory contains:

- `recipe.yaml` - A general recipe that can build all package outputs
- `variants.yaml` - All variant configurations for the package

#### 2. Variant-Specific Recipe (single output)

```text
<your_project>/.pixi/build/work/<package-name>--<hash>/debug/recipe/<variant_hash>/
```

This directory contains:

- `recipe.yaml` - The complete rattler-build recipe generated by the build backend
- `variants.yaml` - The variant configuration used for this specific build

### Rebuilding a Package

To debug or rebuild a package using the same configuration, you have two options:

#### Option 1: Navigate to the recipe directory

1. Navigate to the recipe directory:

   ```bash
   cd .pixi/build/work/<package-name>--<hash>/recipe/<variant_hash>/debug/
   ```

1. Use `rattler-build` to rebuild the package:

   ```bash
   rattler-build build
   ```

#### Option 2: Point to the recipe directory

Use the `--recipe` flag to build without changing directories:

```bash
rattler-build build --recipe .pixi/build/work/<package-name>--<hash>/debug/recipe/<variant_hash>/
```

This allows you to:

- Inspect the exact recipe that was generated
- Debug build failures with direct access to `rattler-build`
- Understand how the build backend translated your project model (`pixi.toml`)

Tip

The `<variant_hash>` ensures that each unique combination of build variants gets its own recipe directory, making it easy to compare different build configurations.

### Debugging JSON-RPC

You can find JSON version of your project model and requests/responses in the same directory alongside `recipe.yaml`. We store:

- Project model: `project_model.json`
- Requests: `*_params.json`
- Responses: `*_response.json`
